fix snake vw on mobile & also fix button hover

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,10 @@ header {
     background: rgb(45, 173, 157);
 }
 
+.get-in-touch:hover {
+    background: rgb(26, 110, 101);
+}
+
 .header-container {
     display: flex;
     flex-direction: column;
@@ -197,6 +201,11 @@ main::before {
         gap: 5px;
         padding-left: 5rem;
         padding-right: 5rem;
+    }
+
+    .snake {
+        border-radius: 8%;
+        width: 100vw;
     }
 
     .skillz-title {
